# src/routes/authRoutes.js
@@ -1,6 +1,13 @@
 import express from "express";
-import { register, login } from "../controllers/authController.js";
+import {
+  register,
+  login,
+  forgotPassword,
+  resetPassword,
+  changePassword,
+} from "../controllers/authController.js";
 import { rateLimit } from "express-rate-limit";
+import { authenticateToken } from "../middleware/authMiddleware.js";
 
 const router = express.Router();
 
@@ -24,5 +31,8 @@ const loginLimiter = rateLimit({
 
 router.post("/register", registerLimiter, register);
 router.post("/login", loginLimiter, login);
+router.post("/forgot-password", forgotPassword);
+router.post("/reset-password", resetPassword);
+router.post("/change-password", authenticateToken, changePassword);
 
 export default router;
